# hl-rev

./: .gitignore  .gitmodules  CHANGELOG.md  HLBOOT.DAT.bt  Makefile  README.md  hlboot.hexpat
bytesto4t/src-tauri/: Cargo.toml  Cross.toml  tauri.conf.json
bytesto4t/src-tauri/capabilities/: default.json
bytesto4t/src-tauri/icons/: icon.icns
bytesto4t/src-tauri/src/: ai_decomp.rs  app_config.rs  app_data.rs  bytecode_refs.rs  lib.rs  main.rs  structgen.rs
bytesto4t/src-tauri/src/commands/: ai.rs  bytecode.rs  config.rs  data.rs  decompiler.rs  export.rs  functions.rs  history.rs  invoke.rs  mod.rs  types.rs
bytesto4t/src-tauri/src/entities/: mod.rs
bytesto4t/src-tauri/src/mcp/: mod.rs  server.rs
bytesto4t/src-tauri/src/mcp/cmd/: add_constant.rs  add_float.rs  add_function.rs  add_global.rs  add_int.rs  add_native.rs  add_string.rs  add_type.rs  bytecode_tools.rs  clear_references.rs  export_function_json.rs  export_text.rs  export_type_json.rs  find_functions_using_type.rs  function_address_tools.rs  generate_imhex_pattern.rs  get_bytes_full_info.rs  get_bytes_list.rs  get_constant_full_info.rs  get_constant_list.rs  get_dashboard_info.rs  get_decompiled_info.rs  get_disassembler_info.rs  get_file_list.rs  get_float_full_info.rs  get_float_list.rs  get_function_full_info.rs  get_function_list.rs  get_function_name_by_index.rs  get_global_full_info.rs  get_global_list.rs  get_inspector_info.rs  get_int_full_info.rs  get_int_list.rs  get_native_full_info.rs  get_native_list.rs  get_references.rs  get_saved_references.rs  get_selected_item.rs  (+31 more)
(+95 files in other folders)
